--- a/src/pages/LoginPage/loginPage.module.scss
+++ b/src/pages/LoginPage/loginPage.module.scss
@@ -6,8 +6,12 @@
   overflow: hidden;
 }
 .login__content {
-  display: flex;
   width: 50%;
+
+}
+.login_form {
+  max-width: 534px;
+  width: 100%;
 }
 .content_title {
   font-size: 32px;
@@ -28,13 +32,15 @@
   flex-direction: column;
   justify-content: center;
   height: 100vh;
+  margin: 16px;
   h1{
     font-size: 72px;
     margin-bottom: 38px;
   }
 
   .input_login {
-    width: 534px;
+    max-width: 534px;
+    width: 100%;
     border: none;
     outline: none;
     background-color: #EBEFF2;
@@ -50,7 +56,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 534px;
+  max-width: 534px;
+  width: 100%;;
   background-color: #EBEFF2;
   height: 66px;
   border-radius: 20px;
@@ -88,12 +95,18 @@
   background-color: #35536BBF;
 }
 .login__image {
-  padding: 16px 16px 16px;
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 50%;
+  height: 100vh;
+  padding: 16px 16px 16px 0;
   img {
-    max-width: 724px;
     width: 100%;
-    max-height: 868px;
     height: 100%;
+    border-radius: 12px;
+    object-fit: cover;
   }
 }
+
+
