--- a/src/components/AppHeader/appHeaader.module.scss
+++ b/src/components/AppHeader/appHeaader.module.scss
@@ -1,87 +1,101 @@
-.header__title {
-  font-size: 40px;
-}
-.header__block {
-  display: flex;
-  width: 100%;
-  justify-content: end;
-}
-.header__input {
+.header {
+  color: #2A3440;
+  height: 100px;
+  padding: 24px;
+  line-height: 22px;
+  background-color: #FFFFFF;
   display: flex;
   align-items: center;
-  width: 350px;
-  height: 52px;
-  background-color: #EBEFF2;
-  border-radius: 14px;
-  margin-right: 24px;
+  justify-content: space-between;
   position: relative;
 
-  input::placeholder{
-    color: #35536B;
+  &__title {
+    font-size: 40px;
   }
-}
-.header__input input{
-  width: calc(100% - 35px);
-  height: 100%;
-  padding: 10px 10px 10px 8px;
-  font-size: 18px;
-  font-weight: 500;
-  border: none;
-  outline: none;
-  background: none;
-}
-.header__input_searchBtn {
-  width: 24px;
-  height: 24px;
-  padding: 0;
-  border: none;
-  background: none;
-  cursor: pointer;
-  margin-left: 10px;
-  img {
+  &__block {
+    display: flex;
+    width: 100%;
+    justify-content: end;
+  }
+  &__searchBlock {
+    display: flex;
+    align-items: center;
+    width: 350px;
+    height: 52px;
+    background-color: #EBEFF2;
+    border-radius: 14px;
+    margin-right: 24px;
+    position: relative;
+    input {
+      width: calc(100% - 35px);
+      height: 100%;
+      padding: 10px 10px 10px 8px;
+      font-size: 18px;
+      font-weight: 500;
+      border: none;
+      outline: none;
+      background: none;
+    }
+    input::placeholder {
+      color: #35536B;
+    }
+  }
+  &__searchBtn {
     width: 24px;
     height: 24px;
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+    margin-left: 10px;
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
-}
-.header__createBtn {
-  max-width: 256px;
-  width: 100%;
-  height: 52px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: none;
-  background-color: #35536B;
-  cursor: pointer;
-  border-radius: 14px;
-  padding: 14px 16px;
-  color: #FFFFFF;
-  font-size: 16px;
-  font-weight: 600;
-  margin-right: 24px;
-}
 
-.header__createBtn:hover {
-  background-color: #3c5d7f;
-}
-.header__createBtn:active {
-  transform: translateY(1px);
-}
+  &__createBtn {
+    max-width: 256px;
+    width: 100%;
+    height: 52px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
+    background-color: #35536B;
+    cursor: pointer;
+    border-radius: 14px;
+    padding: 14px 16px;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 600;
+    margin-right: 24px;
+  }
 
-.header__noticeBtn {
-  width: 52px;
-  height: 52px;
-  border: none;
-  cursor: pointer;
-  background-color: #35536B;
-  border-radius: 50%;
-}
-.header__noticeBtn:hover {
-  background-color: #3c5d7f;
+  &__createBtn:hover {
+    background-color: #3c5d7f;
+  }
 
-}
-.header__noticeBtn:active {
-  transform: translateY(1px);
+  &__createBtn:active {
+    transform: translateY(1px);
+  }
+
+  &__noticeBtn {
+    width: 52px;
+    height: 52px;
+    border: none;
+    cursor: pointer;
+    background-color: #35536B;
+    border-radius: 50%;
+  }
+
+  &__noticeBtn:hover {
+    background-color: #3c5d7f;
+  }
+
+  &__noticeBtn:active {
+    transform: translateY(1px);
+  }
 }
 .noticeBtn_active {
   background-color: #F47356;
@@ -126,18 +140,138 @@
   top: calc(100% + 10px);
   right: 10px;
   width: 440px;
-  padding: 24px 20px;
+  padding: 10px 20px 24px;
   background-color: #F47356;
   border-radius: 14px;
   opacity: 0;
   transform: translateY(-10px);
   visibility: hidden;
   transition: 0.3s;
+  max-height: 450px;
+  &_active {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+  }
+  &__titleBlock {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #FFFFFF;
+    margin-bottom: 12px;
+    height: 64px;
+    h3 {
+      font-size: 18px;
+      color: #FEFEFE;
+      padding: 0;
+      margin-left: 24px;
+    }
+    button {
+      border: none;
+      background: none;
+      cursor: pointer;
+      width: 24px;
+      height: 24px;
+    }
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+  &__clearBtnBlock {
+    display: flex;
+    justify-content: end;
+
+  }
+  &__clearBtn {
+    color: #FFFFFF;
+    background: none;
+    outline: none;
+    cursor: pointer;
+    border: none;
+    border-bottom: 1px solid #FFFFFF;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 16px;
+  }
+  &__innerBlock{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 16px;
+    max-height: 300px;
+    overflow-y: auto;
+    padding-right: 4px;
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #C1C1C1;
+      border-radius: 2px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #FFFFFF;
+    }
+  }
+  &__list{
+    max-width: 400px;
+    max-height: 120px;
+    height: 100vh;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: 0.3s;
+    &_active {
+      display: none;
+    }
+  }
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    button {
+      width: 20px;
+      height: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      border: none;
+      background: none;
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
+  &__data {
+    font-size: 16px;
+    font-weight: 400;
+    &_marker{
+      margin: 0 8px;
+    }
+  }
+  &__listText{
+    height: 22px;
+    font-size: 16px;
+    font-weight: 400;
+
+    &_blue {
+      font-size: 16px;
+      font-weight: 600;
+      color: #5B7E9A;
+    }
+  }
+  &__noNotifications{
+    color: #FFFFFF;
+    font-size: 18px;
+  }
 }
 
-.notificationBlock.active {
-  transform: translateY(0);
-  opacity: 1;
-  visibility: visible;
-}
+
 
