--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,9 @@ p {
   color: #2A3440;
 }
 
+ul, li {
+  list-style-type: none;
+}
 @media only screen and (max-width: 768px){
   section {
     padding: 40px 0;
