--- a/src/pages/MenuPage/menuPage.module.scss
+++ b/src/pages/MenuPage/menuPage.module.scss
@@ -1,3 +1,67 @@
-.table__header {
-  background-color: #f67c62;
+.tableBlock {
+  width: 100%;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.07);
+
+  &__paginationBlock {
+    padding: 40px 0 24px;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__pagination {
+    width: 384px;
+    height: 60px;
+    border: #2A3440 2px solid;
+  }
 }
+.table {
+  width: 100%;
+  font-size: 16px;
+  border-collapse: collapse;
+
+  th, td {
+    text-align: start;
+    padding: 30px 32px 30px 32px;
+  }
+
+  th {
+    border-bottom: 1px #35536B solid;
+  }
+  td {
+    font-weight: 500;
+    border-bottom: 1px #EBEFF2 solid;
+  }
+  tr {
+    transition: all 0.3s;
+  }
+  tbody tr:hover {
+    background-color: #f0f1f1;
+  }
+  &__numSymbol {
+    color: #5B7E9A;
+  }
+  &__btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 28px;
+      height: 28px;
+    }
+  }
+}
+@media (max-height: 850px) {
+  .tableBlock__paginationBlock {
+    padding: 35px 0 20px;
+  }
+  .table th, .table td {
+    padding: 25px 27px 25px 27px;
+    }
+}
+
