--- a/src/components/AppContent/AppContent.module.scss
+++ b/src/components/AppContent/AppContent.module.scss
@@ -3,5 +3,5 @@
   min-height: calc(100vh - 100px);
   color: #2A3440;
   background-color: #EBEFF2;
-  padding: 24px;
+  padding: 24px 24px 56px;
 }
