--- a/src/pages/MenuPage/menuPage.module.scss
+++ b/src/pages/MenuPage/menuPage.module.scss
@@ -69,40 +69,58 @@
   }
 }
 .categoryDropdown {
-
   button {
     border: none;
     background: none;
     cursor: pointer;
+  }
+  &__toggle {
+    position: relative;
+
     margin-left: 7px;
   }
-}
-.dropdownToggle {
-  position: relative;
-}
-.dropdownItem {
-  padding: 5px; // Добавляем немного отступов для элементов выпадающего списка
-  position: relative; // Относительное позиционирование для иконки удаления
-}
 
-.deleteIcon {
-  position: absolute; // Абсолютное позиционирование для иконки удаления
-  top: 50%; // Размещаем иконку по вертикали посередине элемента
-  right: 5px; // Размещаем иконку справа с отступом
-  transform: translateY(-50%); // Корректируем положение иконки по вертикали
-  opacity: 0; // Скрываем иконку по умолчанию
-  transition: opacity 0.3s; // Добавляем плавный переход для анимации появления и исчезновения иконки
-}
+  &__menu {
+    padding: 14px;
+    border-radius: 10px;
+    position: absolute;
+    top: 50px;
+    width: max-content;
+    background-color: #EBEFF2;
+    z-index: 1;
+  }
+  &__item {
+    position: relative;
+    margin-bottom: 10px;
+  }
 
-.dropdownItem:hover .deleteIcon {
-  opacity: 1; // Показываем иконку при наведении на элемент
-}
-.dropdownMenu {
-  text-align: center;
-  border-radius: 10px;
-  position: absolute; // Абсолютное позиционирование для точного позиционирования блока
-  top: 50px; // Размещаем блок сразу под кнопкой
-  width: max-content; // Ширина блока равна ширине содержимого (размеру текста кнопки)
-  background-color: #EBEFF2; // Синий фон для выпадающего блока
-  z-index: 1; // Помещаем блок поверх остального контента
+  &__item:hover {
+    cursor: context-menu;
+    img {
+      opacity: 1;
+    }
+    color: #F45656;
+  }
+
+  &__deleteIcon{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+    cursor: pointer;
+  }
+  &__addCategoryButton {
+    font-weight: 600;
+    font-size: 16px;
+    color: #5B7E9A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      margin-left: 27px;
+    }
+  }
 }
