--- a/src/components/AppHeader/appHeaader.module.scss
+++ b/src/components/AppHeader/appHeaader.module.scss
@@ -122,6 +122,7 @@
     transform: translateY(0);
     opacity: 1;
     visibility: visible;
+    z-index: 2;
   }
   &__titleBlock {
     display: flex;
