--- a/src/pages/MenuPage/menuPage.module.scss
+++ b/src/pages/MenuPage/menuPage.module.scss
@@ -68,7 +68,12 @@
     padding: 18px 8px 18px 24px;
   }
 }
+.categoryDropdown_active {
+  background-color: #EBEFF2;
+  border-radius: 10px;
+}
 .categoryDropdown {
+  position: relative;
   button {
     border: none;
     background: none;
@@ -76,18 +81,16 @@
   }
   &__toggle {
     position: relative;
-
     margin-left: 7px;
   }
 
   &__menu {
-    padding: 14px;
+    padding: 18px 15px 18px 24px;
     border-radius: 10px;
-    position: absolute;
-    top: 50px;
-    width: max-content;
     background-color: #EBEFF2;
+    position: absolute;
     z-index: 1;
+    left: 0;
   }
   &__item {
     position: relative;
