--- a/src/components/AppSider/AppSider.module.scss
+++ b/src/components/AppSider/AppSider.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: calc(100vh - 120px);
+  height: 100vh;
 }
 .sider__title {
   font-size: 32px;
@@ -86,7 +86,7 @@
     transition: background-color 0.1s;
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
     img {
       margin-right: 10px;
     }
