T4-203 Make a Modal to create Category

--- a/src/components/buttons/Button.module.scss
+++ b/src/components/buttons/Button.module.scss
@@ -14,6 +14,11 @@
   border-radius: 10px;
   height: 56px;
 }
+.buttonBorder__modal {
+  background-color: #FFFFFF;
+  border: 1px solid #35536B;
+  color: #35536B;
+}
 .button__login {
   border-radius: 20px;
 }
