--- a/src/pages/MenuPage/menuPage.module.scss
+++ b/src/pages/MenuPage/menuPage.module.scss
@@ -17,17 +17,22 @@
   }
 }
 .table {
+  position: relative;
   width: 100%;
   font-size: 16px;
   border-collapse: collapse;
 
-  th, td {
+  th {
     text-align: start;
-    padding: 30px 2px 30px 32px;
+    padding: 30px 18px 30px 18px;
+  }
+  td {
+    text-align: start;
+    padding: 30px 18px 30px 18px;
   }
 
   th {
-    border-bottom: 1px #35536B solid;
+
     line-height: 32px;
   }
   td {
@@ -64,43 +69,57 @@
   .tableBlock__pagination {
     height: 40px;
   }
-  .table th, .table td {
-    padding: 18px 8px 18px 24px;
-  }
+
+}
+
+.trBlock {
+  position: relative;
+  border-bottom: 1px #35536B solid;
 }
 .categoryDropdown_active {
+  position: absolute;
   background-color: #EBEFF2;
   border-radius: 10px;
+
 }
 .categoryDropdown {
-  position: relative;
+  position: absolute;
   button {
     border: none;
     background: none;
     cursor: pointer;
   }
   &__toggle {
+    font-size: 16px;
+    font-weight: 600;
+    color: #2A3440;
     position: relative;
-    margin-left: 7px;
+
+    img {
+      margin-left: 12px;
+    }
   }
 
   &__menu {
-    padding: 18px 15px 18px 24px;
-    border-radius: 10px;
-    background-color: #EBEFF2;
-    position: absolute;
-    z-index: 1;
-    left: 0;
+    //padding: 18px 15px 18px 24px;
+    //border-radius: 10px;
+    //position: absolute;
+    //z-index: 1;
+    //left: 0;
+
+    margin-top: 10px;
   }
   &__item {
     position: relative;
     margin-bottom: 10px;
+
   }
 
   &__item:hover {
     cursor: context-menu;
     img {
       opacity: 1;
+
     }
     color: #F45656;
   }
@@ -113,6 +132,7 @@
     opacity: 0;
     transition: opacity 0.3s;
     cursor: pointer;
+
   }
   &__addCategoryButton {
     font-weight: 600;
@@ -121,9 +141,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-bottom: -18px;
     img {
-      margin-left: 27px;
+      margin-left: 12px;
     }
   }
 }
