--- a/src/components/modals/AddNewBranchModal/AddNewBranchModal.module.scss
+++ b/src/components/modals/AddNewBranchModal/AddNewBranchModal.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .modal {
@@ -13,6 +14,7 @@
   &__title {
     font-weight: 600;
     font-size: 24px;
+    text-align: start;
   }
 
   &__subtitle {
@@ -41,6 +43,7 @@
   &__btnWrapper {
     display: flex;
     gap: 12px;
+    margin-top: 48px;
   }
 
   &__btn {
@@ -52,6 +55,23 @@
 }
 
 .modalClose_btn {
+  width: 32px;
+  height: 32px;
+  background: none;
+}
+
+.upload_text {
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.upload_link {
+  color: #f47356;
+  text-decoration: underline;
+}
+
+.modalClose_btn:hover {
+  background-color: #fff;
 }
 
 .cancel__btn {
@@ -70,52 +90,139 @@
   background-color: #35536b;
 }
 
-.schedule_wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 70px;
-}
+// .schedule_wrapper {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   gap: 70px;
+// }
 
 .schedule {
-  margin-bottom: 48px;
-}
-
-.daysWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.daysCheckbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.row {
   display: flex;
   align-items: center;
   justify-content: start;
-  gap: 45px;
+  gap: 70px;
 }
 
-.imgUploadTitle {
+.schedule_title {
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.schedule_type {
+  display: flex;
+  justify-content: start;
+  gap: 180px;
+}
+
+.schedule_type h4 {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.schedule_line {
+  border-bottom: 1px solid #2a3440;
+  margin: 14px 0 16px 0;
+}
+
+.dayAndCheckbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // gap: 61px;
+  height: 36px;
+}
+
+.day {
+  width: 150px;
+  height: 36px;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.checkbox {
+  position: relative;
+  width: 22px;
+  height: 22px;
+  background-color: #f5f5f5;
+  border: 1px solid #00315d;
+  border-radius: 4px;
+  appearance: none;
+  cursor: pointer;
+}
+
+.checkbox::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 8px;
+  width: 5px;
+  height: 10px;
+  border: 2px solid transparent;
+  border-left: none;
+  border-top: none;
+  transform: rotate(45deg) scale(1);
+}
+
+.checkbox:checked::before {
+  border-color: #00315d;
+}
+
+.timePicker_wrapper {
+  margin-bottom: 16px;
+  margin-top: 10px;
+}
+
+.timePicker {
+  width: 85px;
+  height: 36px;
+  border: 1px solid #c1c1c3;
+  font-weight: 400 !important;
+  font-size: 20px !important;
+  color: #2a3440;
+}
+
+.timePicker_line {
   font-weight: 600;
   font-size: 20px;
 }
+
+// .daysWrapper {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+// .daysCheckbox {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+// .header {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
+
+// .row {
+//   display: flex;
+//   align-items: center;
+//   justify-content: start;
+//   gap: 45px;
+// }
+
+// .imgUploadTitle {
+//   font-weight: 600;
+//   font-size: 20px;
+// }
 
 .dragger_container {
   border: 16px solid #ebeff2;
   border-radius: 12px;
 }
 
-.draggerInline_container {
-  //   border: 1px dashed #5b7e9a;
-}
+// .draggerInline_container {
+//     border: 1px dashed #5b7e9a;
+// }
